# tdesktop

./: .gitignore  README.md  feeds.txt  main.py  my_desktop.sh  notes.py  pomodoro.py  pyproject.toml  rss_reader.py
